# mcp-divineapi-docs

./: CHANGELOG.md  Dockerfile  README.md  build_examples.py  docker-compose.yml  docs-pack.txt  examples.json  pyproject.toml  server.json  server.py
divineapi_docs_mcp/: __init__.py  docs-pack.txt  examples.json  server.py
