[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "divineapi-docs-mcp"
version = "1.0.0"
description = "Public read-only MCP server for the DivineAPI REST API documentation: endpoints, parameters, responses, auth rules, and examples."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Divine API", email = "admin@divineapi.com" },
]
keywords = [
    "mcp", "divineapi", "astrology", "documentation", "reference",
    "openapi", "rest-api", "developer-docs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Documentation",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
http = [
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
]

[project.urls]
Homepage = "https://divineapi.com"
Documentation = "https://developers.divineapi.com"
Repository = "https://github.com/DivineAPI/mcp-divineapi-docs"

[project.scripts]
divineapi-docs-mcp = "divineapi_docs_mcp:main"
divineapi-docs-mcp-http = "divineapi_docs_mcp:main_http"

[tool.hatch.build.targets.wheel]
packages = ["divineapi_docs_mcp"]
